--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Weather</title>
 </head>
+
 <body>
     <form id="cityForm">
         <input name="city" type="text" />
     </form>
     <button id="submit" onclick="submitCity()">Get Weather</button>
-    <button id="submit" onclick="forecast()">Get Forecast</button>
     <div id="weatherData"></div>
+    
     <script type="text/javascript" src="weatherapi.js"></script>
 </body>
+
 </html>
